package com.example.patronesDeDiseno.Comportamiento.Observer;

public interface Observer {
    void update(String message);
}
